tests/type_errors/map_to_string_then_sum.nos
# expect_error: Num
# map converts Int to String, then sum requires Num
main() = [1, 2, 3].map(x => show(x)).sum()
